pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod-secret
spec:
  containers:
  - name: demo-container
    image: busybox
    command: ["sh", "-c", "echo Username: $USERNAME && echo Password: $PASSWORD && sleep 3600"]
