pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
spec:
  containers:
  - name: demo-container
    image: busybox
    command: ["sh", "-c", "echo Username: $USERNAME && echo Password: $PASSWORD && sleep 3600"]
wq!        configMapKeyRef:
          name: demo-configmap
          key: password
